app/assets/stylesheets/components/question_show.scss
.content-question{
  background: white;
  min-height: 100vh;
  overflow: auto;
}

.question-show-wrapper {
  display: flex;
  width: 74%;
  margin: 0 auto;
  padding-top: 83px;
  padding-left: 32px;
  padding-right: 32px;
  padding-bottom: 32px;
  align-items: center;
  background: white;
}

.question-show {
  display: flex;
  flex-direction: column;
  min-height: 1px;
  width: 602px;
  font-style: serif;
  font-size: 18px;
  border-radius: 4px;
  margin-bottom: 8px;
}

.question-show-topic {
  font-size: 13px;
  color: #666;
}

.question-show-title {
  font-size: 23px;
  font-weight: bold;
}

.answer-submit-form {
  width: 100%;
  background: #fafafa;
  border: 1px solid #e2e2e2;
  border-radius: 3px;
}

.answer-submit-form-userinfo {
  padding: 10px 8px;
  border-radius: 3px 3px 0 0;
  min-height: 39px;
}

.answer-submit-button {
  font-size: 13px;
  line-height: 1.4;
  border-radius: 3px;
  font-weight: 500;
  padding: 3px 7px 4px 7px;
  margin-left: 5px;
  background: #3e78ad;
  border: 1px solid #3a66ad;
  color: white;
  box-shadow: 0 1px 1px 0 rgba(200,200,200,0.6);
}

.answer-submit-button:active {
  background: #54a5ef;
}

.answer-index {
  display: flex;
  flex-direction: column;
}

.answer-index-item {
  width: 100%;
  font-style: serif;
  font-size: 18px;
  border-radius: 4px;
  margin-bottom: 8px;
  border-bottom: 1px solid #e2e2e2;
  background: white;
  padding: 16px;
  padding-left: 0px;
  padding-right: 0px;
}

.answer-author {
  font-size: 15px;
}

.answer-body {
  font-size: 16px;
}

.answer-body > ul {
  list-style: disc;
}

.answer-body > ul > li {
  margin-left: 2em;
  padding-bottom: .7em;
}

